// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Tooltip Central smoke-test 1`] = `
<div class="grid grid-cols-2 gap-4 w-[37.5rem]">
  <div class="font-mono text-center">
    dark
  </div>
  <div class="font-mono text-center">
    light
  </div>
  <div class="w-64 h-64 bg-neutral-1300 flex items-center justify-center m-6 border mx-auto rounded-lg">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 16 16"
             fill="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class="text-neutral-800 dark:text-neutral-500"
             style="width: 1rem; height: 1rem;"
        >
          <path fill-rule="evenodd"
                d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0ZM9 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0ZM6.75 8a.75.75 0 0 0 0 1.5h.75v1.75a.75.75 0 0 0 1.5 0v-2.5A.75.75 0 0 0 8.25 8h-1.5Z"
                clip-rule="evenodd"
          >
          </path>
        </svg>
      </button>
    </div>
  </div>
  <div class="w-64 h-64 flex items-center justify-center m-6 border mx-auto rounded-lg">
    <div theme="light"
         class="inline-flex ml-2"
    >
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 16 16"
             fill="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class="text-neutral-800 dark:text-neutral-500"
             style="width: 1rem; height: 1rem;"
        >
          <path fill-rule="evenodd"
                d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0ZM9 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0ZM6.75 8a.75.75 0 0 0 0 1.5h.75v1.75a.75.75 0 0 0 1.5 0v-2.5A.75.75 0 0 0 8.25 8h-1.5Z"
                clip-rule="evenodd"
          >
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Components/Tooltip Interactive smoke-test 1`] = `
<div class="grid grid-cols-2 gap-4 w-[37.5rem]">
  <div class="font-mono text-center">
    dark
  </div>
  <div class="font-mono text-center">
    light
  </div>
  <div class="w-64 h-64 bg-neutral-1300 flex items-center justify-center m-6 border mx-auto rounded-lg">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 16 16"
             fill="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class="text-neutral-800 dark:text-neutral-500"
             style="width: 1rem; height: 1rem;"
        >
          <path fill-rule="evenodd"
                d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0ZM9 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0ZM6.75 8a.75.75 0 0 0 0 1.5h.75v1.75a.75.75 0 0 0 1.5 0v-2.5A.75.75 0 0 0 8.25 8h-1.5Z"
                clip-rule="evenodd"
          >
          </path>
        </svg>
      </button>
    </div>
  </div>
  <div class="w-64 h-64 flex items-center justify-center m-6 border mx-auto rounded-lg">
    <div theme="light"
         class="inline-flex ml-2"
    >
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 16 16"
             fill="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class="text-neutral-800 dark:text-neutral-500"
             style="width: 1rem; height: 1rem;"
        >
          <path fill-rule="evenodd"
                d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0ZM9 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0ZM6.75 8a.75.75 0 0 0 0 1.5h.75v1.75a.75.75 0 0 0 1.5 0v-2.5A.75.75 0 0 0 8.25 8h-1.5Z"
                clip-rule="evenodd"
          >
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Components/Tooltip LeftBound smoke-test 1`] = `
<div class="grid grid-cols-2 gap-4 w-[37.5rem]">
  <div class="font-mono text-center">
    dark
  </div>
  <div class="font-mono text-center">
    light
  </div>
  <div class="w-64 h-64 bg-neutral-1300 flex items-center m-6 border mx-auto rounded-lg">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 16 16"
             fill="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class="text-neutral-800 dark:text-neutral-500"
             style="width: 1rem; height: 1rem;"
        >
          <path fill-rule="evenodd"
                d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0ZM9 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0ZM6.75 8a.75.75 0 0 0 0 1.5h.75v1.75a.75.75 0 0 0 1.5 0v-2.5A.75.75 0 0 0 8.25 8h-1.5Z"
                clip-rule="evenodd"
          >
          </path>
        </svg>
      </button>
    </div>
  </div>
  <div class="w-64 h-64 flex items-center m-6 border mx-auto rounded-lg">
    <div theme="light"
         class="inline-flex ml-2"
    >
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 16 16"
             fill="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class="text-neutral-800 dark:text-neutral-500"
             style="width: 1rem; height: 1rem;"
        >
          <path fill-rule="evenodd"
                d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0ZM9 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0ZM6.75 8a.75.75 0 0 0 0 1.5h.75v1.75a.75.75 0 0 0 1.5 0v-2.5A.75.75 0 0 0 8.25 8h-1.5Z"
                clip-rule="evenodd"
          >
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;
